# xorg__lib__libXrandrUtils

./: .gitignore  AUTHORS  COPYING  Makefile.am  README  configure.ac  xrandr-utils.pc.in
examples/: Makefile.am  xrandr.c
include/X11/extensions/: XrandrUtils.h
man/: Makefile.am  XrandrUtils.man
src/: Makefile.am
test/: .gitignore  Makefile.am  README  geometry.c
